fix(frontend | backend): fix cocktail search, upload form, small code refactor
